# microsoft-agent-framework-demo

./: .gitignore  README.md  agent.py  agent_mcp.py  agent_mcp_sse.py  agent_with_rag_tool.py  agent_with_tool.py  agent_with_tool_streaming.py  agent_with_tool_structured_output.py  agents_in_workflows.py  agents_in_workflows_conditionals.py  agents_in_workflows_switch.py  agents_mcp_workflows.py  human_in_the_loop.py  main.py  output.py  pyproject.toml  search_index_manager.py
