[project]
name = "agent-framework-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agent-framework>=1.0.0b251016",
    "azure-ai-inference>=1.0.0b9",
    "azure-search>=1.0.0b2",
    "azure-search-documents>=11.6.0",
]
